--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .set-container{
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    justify-content: center;
 }
 .set{
     width: 30%;
